# BOMegaBench

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_CATALOG.md  DESIGN_BENCH_SUPPLEMENT.md  DISCRETE_ENCODING_GUIDE.md  DISCRETE_ENCODING_IMPLEMENTATION.md  HUMANOID_BENCH_INTEGRATION.md  MUJOCO_INTEGRATION.md  MUJOCO_QUICKSTART.md  OLYMPUS_INTEGRATION.md  OLYMPUS_QUICKSTART.md  PARAMETER_TYPE_VERIFICATION.md  README.md  ROBOSUITE_INTEGRATION.md  pyproject.toml  setup.py  test_mol_opt_integration.py
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
archive/: README.md
archive/analysis_docs/: ANALYSIS_INDEX.md  ARCHITECTURE_DIAGRAM.txt  BENCHBASE_INTEGRATION_REPORT.md  BENCHBASE_INTEGRATION_SUMMARY.md  CODEBASE_ANALYSIS.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  DATABASE_KNOB_CONFIGURATION.md  DATABASE_TUNING_INTEGRATION_GUIDE.md  DATABASE_TUNING_QUICKREF.md  EXECUTIVE_SUMMARY.txt  INTEGRATION_SUMMARY.txt  hpo_benchmarks_complete_list.md  lasso_bench_integration.md  lasso_bench_integration_summary.md  synthetic_funcs.md
archive/dev_scripts/: botorch_functions.py  check_all_botorch.py  check_botorch_funcs.py  check_functions.py  check_missing_classical.py  consolidated_functions.py  debug_import.py  fix_evaluate.py  quick_check.py  synthetic_functions.py
archive/test_scripts/: test_all_24_bbob.py  test_basic.py  test_bbob_coco_final.py  test_bbob_coco_raw.py  test_bbob_complete.py  test_bbob_count.py  test_bbob_pure_coco.py  test_classical_functions.py  test_coco.py  test_coco_bbob.py  test_coco_minimal.py  test_coco_simple.py  test_coco_simple_working.py  test_final_classical.py  test_final_complete.py  test_hpobench_complete.py  test_lasso_bench_integration.py  test_which_bbob.py
bomegabench/: __init__.py  benchmark.py  core.py  visualization.py
bomegabench/functions/: __init__.py  benchbase_wrapper.py  consolidated_functions.py  database_tuning.py  design_bench_tasks.py  hpo_benchmarks.py  hpobench_benchmarks.py  humanoid_bench_tasks.py  lasso_bench.py  mujoco_control.py  olympus_datasets.py  olympus_surfaces.py  registry.py  robosuite_manipulation.py  synthetic_functions.py
bomegabench/utils/: __init__.py  dependencies.py  (+1 more)
examples/: basic_usage.py  database_tuning_example.py  discrete_encoding_demo.py  example_mujoco_control.py  hpo_benchmark_example.py  humanoid_bench_example.py  lasso_bench_example.py  lasso_bench_simple.py  robosuite_example.py  test_olympus_integration.py
tests/: test_consolidated.py  test_dependencies.py  test_humanoid_bench_integration.py  test_mujoco_integration.py  test_robosuite_integration.py  test_synthetic.py
(+21 files in other folders)
