[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bomegabench"
version = "0.1.0"
description = "Comprehensive Bayesian Optimization benchmark library with 200+ benchmark functions"
readme = "README.md"
authors = [
    {name = "BOResearch", email = ""}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
lasso = [
    "LassoBench @ git+https://github.com/ksehic/LassoBench.git",
]
hpo = [
    "bayesmark>=0.1.0",
    "ConfigSpace>=0.6.0",
]
hpobench = [
    "hpobench>=0.0.8",
]
all = [
    "bomegabench[lasso]",
    "bomegabench[hpo]",
    "bomegabench[hpobench]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/BOResearch/BOMegaBench"
Documentation = "https://bomegabench.readthedocs.io"
Repository = "https://github.com/BOResearch/BOMegaBench.git"
"Bug Tracker" = "https://github.com/BOResearch/BOMegaBench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bomegabench*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | HPOBench
  | LassoBench
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["bomegabench"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v"
]
